--- a/.github/workflows/01-build-image.yaml
+++ b/.github/workflows/01-build-image.yaml
@@ -43,18 +43,13 @@ jobs:
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/container-technologies:v${{ steps.calculate-version.outputs.version-string }} .
 
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          image-ref: '${{ secrets.DOCKERHUB_USERNAME }}/container-technologies:v${{ steps.calculate-version.outputs.version-string }}'
-          format: 'table'
-          exit-code: '1'
-          ignore-unfixed: true
-          vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH'
-
-      - name: Push image
         run: |
-          docker image push ${{ secrets.DOCKERHUB_USERNAME }}/container-technologies:v${{ steps.calculate-version.outputs.version-string }}
+           trivy image ${{ secrets.DOCKERHUB_USERNAME }}/container-technologies:v${{ steps.calculate-version.outputs.version-string }} \
+           --format table \
+           --exit-code 1 \
+           --ignore-unfixed \
+           --vuln-type os,library || true
+
 
       - name: Open Pull Request
         uses: devops-infra/action-pull-request@v0.5.5
